[metadata]
description-file = README.md

[flake8]
# match black line-length
max-line-length = 100
extend-ignore =
    # A few mods here to silence conflicts with black
    E201, # whitespace after '['
    E202, # whitespace before ']'
    E203, # whitespace before ',' # See https://github.com/PyCQA/pycodestyle/issues/373
    E231, # missing whitespace after ','
per-file-ignores =
    ./examples/pdtable_demo.py:E402,E501
exclude =
    .ipynb_checkpoints
