[metadata]
description-file = README.md

[flake8]
# match black line-length
max-line-length = 100
extend-ignore =
    # A few mods here to silence conflicts with black
    E201, # whitespace after '['
    E202, # whitespace before ']'
    E203, # whitespace before ',' # See https://github.com/PyCQA/pycodestyle/issues/373
    E231, # missing whitespace after ','
per-file-ignores =
    # Be a bit more flexible in jupytext notebook paired scripts
    ./examples/pdtable_demo.py:E402,E501
    # Test data generated on the fly with dedent: blank line with whitespace is fine
    test_*.py:W293

exclude =
    .ipynb_checkpoints
